  or syntax tokens for a line. This should prevent the text area from
  stalling if the buffer is being saved in an I/O thread.

- Fixed a performance regression from pre2. If all line contexts were
  valid, a subsequent request for a line's syntax tokens would
  invalidate all contexts from that line onwards. This did not happen if
  for example all but one context was valid.

}}}
{{{ Bug Fixes

- Fixed NullPointerException when loading plugins if opened buffers
  contained an invalid 'folding' property.

- Fixed NullPointerException when invoking Complete Word in an edit mode
  that did not define a keyword map.

- Selecting 'Close' from a cloned dockable's popup menu closed the wrong
  window.

- Plugin manager window did not have the same icon as all other jEdit
  windows.

- "What's new in jEdit 4.2" document was missing from the download due
  to a packaging error.

- "Highlight every n lines" color setting in Gutter option pane didn't
  work properly.

- Plugin manager hardcoded the table foreground color to black, this
  could make the table unreadable if the text area background was dark
  and "use jEdit text area colors in all text controls" was on.

- EOL_SPAN_REGEXP rules threw NullPointerExceptions.

- Plugins that failed to load were not marked as such, and showed up as
  "Loaded" in the plugin manager.

- Added a workaround for a MacOS X Java bug where renaming a file to
  contain a path to a non-existent directory would delete the file.

- It is now possible to rename a file to another name that only differs
  in case on Windows.

- If "Ignore Case" was on, searching for strings containing certain
  characters (such as Unicode 0x00df) did not work since
  String.toUpperCase() sometimes mangles the string in various ways.
  Processing the string with Character.toUpperCase() doesn't seem to do
  this.

- The "Abbreviations" option pane now correctly handles expansions with
  duplicate abbreviations.
