@@ -39,7 +39,7 @@ import org.gjt.sp.util.Log;
 
 /**
  * @author Slava Pestov
- * @version $Id: VFSDirectoryEntryTable.java,v 1.14 2003/05/29 02:46:48 spestov Exp $
+ * @version $Id: VFSDirectoryEntryTable.java,v 1.15 2003/06/05 22:20:54 spestov Exp $
  * @since jEdit 4.2pre1
  */
 public class VFSDirectoryEntryTable extends JTable
@@ -412,12 +412,27 @@ public class VFSDirectoryEntryTable extends JTable
 
 		for(int i = 0; i < model.files.length; i++)
 		{
-			for(int j = 0; j < widths.length; j++)
+			VFSDirectoryEntryTableModel.Entry entry
+				= model.files[i];
+			Font font = (entry.dirEntry.type
+				== VFS.DirectoryEntry.FILE
+				? renderer.plainFont : renderer.boldFont);
+			fm = getFontMetrics(font);
+
+			widths[0] = Math.max(widths[0],
+				renderer.getEntryWidth(
+				entry,fm));
+
+			for(int j = 1; j < widths.length; j++)
 			{
-				int width = renderer.getTableCellRendererComponent(
-					this,model.files[i],false,false,i,j)
-					.getPreferredSize().width;
-				widths[j] = Math.max(widths[j],width);
+				String extAttr = model.getExtendedAttribute(
+					j - 1);
+				String attr = entry.dirEntry.getExtendedAttribute(extAttr);
+				if(attr != null)
+				{
+					widths[j] = Math.max(widths[j],
+						fm.stringWidth(attr));
+				}
 			}
 		}
 
